# asg-tool

./: .gitignore  Dockerfile  Dockerfile_test  Makefile  README.md  pyproject.toml  requirements.txt
.reqs/: GIN-0.1.1-py3-none-any.whl  requirements.txt  teadal_executor-0.1.1-py3-none-any.whl
asg-instructions/: Medical-instructions.yaml
config/: gin-ollama.yaml  gin-teadal-config.yaml  gin-watsonx.yaml  ollama-tdl1-granite-20b.yaml
docs/: 00-developing-asg.md  01-installing-asg.md  02-configuring-asg.md  03-specifying-sfdp.md  04-generating-sfdp.md  05-validating-sfdp.md  06-deploying-sfdp.md  2025-08-26-debug-log-example.md  configuring-asg.md  generating-sfdp.md  installing-asg.md  validating-sfdp.md
examples/: ephemeral_vectorstore_config.yaml  persistent_vectorstore_config.yaml
fast_api_from_spec/: fast_api_template.jinja2  generate_app_from_spec.py  generated_fastapi_app.py  generated_fastapi_app_fdp-amts-gtfs-static.py  generated_fastapi_app_fdp-czech-plant.py  generated_fastapi_app_medical-spec.py  get_openapi_paths.py
generated_servers/: generated_fastapi_app_fdp-amts-gtfs-static.py  generated_fastapi_app_fdp-czech-plant.py  generated_fastapi_app_medical-spec.py  requirements-sfdps.txt
openapi-specs/: fdp-amts-gtfs-static.yaml  fdp-czech-plant.yaml  medical-spec.yaml
sfdp-template/: .env  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  requirements-base.txt  requirements-dev.txt  requirements-local.txt  requirements.txt  sfdp_template.jinja2
src/: fast_api_template.jinja2  files_helper.py  generate_sfdp.py  get_openapi_paths.py  (+4 more)
(+58 files in other folders)
